Contact Details Updated

--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
     <title>Satyam Queen Necklace</title>
 
     <!-- SEO -->
-    <meta property="og:title" content="" />
-    <meta property="og:url" content="" />
-    <meta property="og:image" content="" />
-    <meta property="og:description" content="" />
+    <meta property="og:title" content="Queens Necklace Kharghar" />
+    <meta
+      property="og:url"
+      content="https://premiumpropertiesnavimumbai.com/queensnecklacekharghar/" />
+    <meta
+      property="og:image"
+      content="https://premiumpropertiesnavimumbai.com/queensnecklacekharghar/img/banners/mobile_banner2.jpg" />
+    <meta
+      property="og:description"
+      content="Satyam Queens Necklace, Upper Kharghar: Luxurious high-rise living with world-class amenities, spacious Jodi flats, and secured approvals, all at an affordable price." />
     <meta name="robots" content="index, follow" />
 
     <!-- Favicon -->
@@ -230,27 +236,27 @@
             <!--  -->
             <div class="overview-para mt-3">
               <p>
-                Satyam Developers have unveiled their highly anticipated project
-                in Upper Kharghar, offering extraordinary living at an
-                affordable price. The project features luxurious high-rise
-                towers with four levels of parking, a stunning podium with
-                world-class amenities on the 5th floor, and Jodi flats available
-                for those seeking spacious living. With environmental clearance
-                and building permissions already secured, RERA approval is
-                expected soon. If you're dreaming of a home in Kharghar, this
-                remarkable development is worth a visit.
+                Satyam Queens Necklace is the highly anticipated project in
+                Upper Kharghar, offering extraordinary living at an affordable
+                price. The project features luxurious high-rise towers with four
+                levels of parking, a stunning podium with world-class amenities
+                on the 5th floor, and Jodi flats available for those seeking
+                spacious living. With environmental clearance and building
+                permissions already secured, RERA approval is expected soon. If
+                you're dreaming of a home in Kharghar, this remarkable
+                development is worth a visit.
               </p>
               <span id="dots9" style="display: inline"></span>
               <span id="more9" style="display: none">
                 <p>
-                  Drawing inspiration from the iconic Queen’s Necklace at Marine
+                  Drawing inspiration from the iconic Queen's Necklace at Marine
                   Drive, renowned for its crescent-shaped promenade and
                   shimmering city lights resembling a necklace, this project
                   brings a touch of elegance and timeless charm to Navi Mumbai.
                   Located in Upper Kharghar, the development recreates this
                   grandeur with a unique, contemporary residential experience.
                   Highlights include a sprawling 30,000 sq. ft. recreation zone
-                  and a breathtaking terrace at 265 feet above ground. Don’t
+                  and a breathtaking terrace at 265 feet above ground. Don't
                   miss the chance to be part of this extraordinary living
                   experience.
                 </p></span
@@ -882,7 +888,7 @@
               <li>
                 Project Registered under Government of India RERA Act 2016
               </li>
-              <li>RERA Registration No:-</li>
+              <li>RERA Registration No:- Coming Soon</li>
               <!--<li>MAHA RERA Project Registration No.: </li>-->
               <li><b>Site Address:</b> Kharghar, Navi Mumbai, Maharashtra</li>
             </ul>
@@ -941,16 +947,16 @@
       <ul class="nav nav-fill action-footer">
         <li class="nav-item ps-1">
           <a
-            onclick="return gtag_report_conversion('https://wa.me/+91123456789 ');"
-            href="https://wa.me/+91123456789 "
+            onclick="return gtag_report_conversion('https://wa.me/+919321140032');"
+            href="https://wa.me/+919321140032"
             class="text-decoration-none text-white">
             <i class="fa-brands fa-whatsapp nav-icon"> </i> Whatsapp
           </a>
         </li>
         <li class="nav-item ps-1">
           <a
-            onclick="return gtag_report_conversion('tel:+91123456789 ');"
-            href="tel:+91123456789 "
+            onclick="return gtag_report_conversion('tel:+919321140032');"
+            href="tel:+919321140032"
             class="text-decoration-none text-white">
             <i class="fa-solid fa-phone me-2"></i> Call Us
           </a>
