--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Privacy Policy -</title>
+    <title>Privacy Policy - Satyam Queen Necklace</title>
 
     <!-- Favicon -->
     <link rel="icon" href="img/logo/favicon.png" sizes="16x16" />
@@ -83,7 +83,9 @@
         Be Able To Gain Access To Some Of The Limited Services Or Use Some
         Features Of The Site. In Case Of Any Queries Or Suggestions Regarding
         Privacy Statement Or Your Dealings With This Web Site, Please Contact:
-        <a href="mailto:#" class="text-lowercase"> info@gmail.com </a>
+        <a href="mailto:capitalhome111@gmail.com" class="text-lowercase">
+          capitalhome111@gmail.com
+        </a>
       </p>
     </div>
   </body>
