--- a/thank_you.html
+++ b/thank_you.html
@@ -6,20 +6,20 @@
     <title>{Project Name}</title>
 
     <!-- SEO -->
-    <meta property="og:title" content="" />
-    <meta property="og:url" content="" />
-    <meta property="og:image" content="" />
-    <meta property="og:description" content="" />
+    <meta property="og:title" content="Queens Necklace Kharghar" />
+    <meta
+      property="og:url"
+      content="https://premiumpropertiesnavimumbai.com/queensnecklacekharghar/" />
+    <meta
+      property="og:image"
+      content="https://premiumpropertiesnavimumbai.com/queensnecklacekharghar/img/banners/mobile_banner2.jpg" />
+    <meta
+      property="og:description"
+      content="Satyam Queens Necklace, Upper Kharghar: Luxurious high-rise living with world-class amenities, spacious Jodi flats, and secured approvals, all at an affordable price." />
     <meta name="robots" content="index, follow" />
 
     <!-- Favicon -->
     <link rel="icon" href="img/logo/favicon.jpg" sizes="16x16" />
-
-    <!-- Prefetch -->
-    <link rel="prefetch" href="https://cdn.jsdelivr.net" crossorigin />
-    <link rel="prefetch" href="https://cdnjs.cloudflare.com/" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <!-- Bootstrap CDN -->
     <link
@@ -199,7 +199,7 @@
               <li>
                 Project Registered under Government of India RERA Act 2016
               </li>
-              <li>RERA Registration No:-</li>
+              <li>RERA Registration No:- Coming Soon</li>
               <!--<li>MAHA RERA Project Registration No.: </li>-->
               <li><b>Site Address:</b> Kharghar, Navi Mumbai, Maharashtra</li>
             </ul>
@@ -258,16 +258,16 @@
       <ul class="nav nav-fill action-footer">
         <li class="nav-item ps-1">
           <a
-            onclick="return gtag_report_conversion('https://wa.me/+91123456789 ');"
-            href="https://wa.me/+91123456789 "
+            onclick="return gtag_report_conversion('https://wa.me/+919321140032');"
+            href="https://wa.me/+919321140032"
             class="text-decoration-none text-white">
             <i class="fa-brands fa-whatsapp nav-icon"> </i> Whatsapp
           </a>
         </li>
         <li class="nav-item ps-1">
           <a
-            onclick="return gtag_report_conversion('tel:+91123456789 ');"
-            href="tel:+91123456789 "
+            onclick="return gtag_report_conversion('tel:+919321140032');"
+            href="tel:+919321140032"
             class="text-decoration-none text-white">
             <i class="fa-solid fa-phone me-2"></i> Call Us
           </a>
