--- a/termsandcondition.html
+++ b/termsandcondition.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Terms & Conditions -</title>
+    <title>Terms & Conditions - Satyam Queen Necklace</title>
 
     <!-- Favicon -->
     <link rel="icon" href="img/logo/favicon.png" sizes="16x16" />
