All Codes Added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Satyam Queen Necklace</title>
 
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-11547669967"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "AW-11547669967");
+    </script>
+    <!-- Event snippet for Queens Necklace Whatsapp lead conversion page
+In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
+    <script>
+      function gtag_report_conversion(url) {
+        var callback = function () {
+          if (typeof url != "undefined") {
+            window.location = url;
+          }
+        };
+        gtag("event", "conversion", {
+          send_to: "AW-11547669967/C-noCNjihYIaEM_rrYIr",
+          event_callback: callback,
+        });
+        return false;
+      }
+    </script>
+
+    <!-- Event snippet for Queens Necklace Call from Website conversion page
+In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
+    <script>
+      function gtag_report_conversion(url) {
+        var callback = function () {
+          if (typeof url != "undefined") {
+            window.location = url;
+          }
+        };
+        gtag("event", "conversion", {
+          send_to: "AW-11547669967/bAicCJTmhYIaEM_rrYIr",
+          event_callback: callback,
+        });
+        return false;
+      }
+    </script>
+
     <!-- SEO -->
     <meta property="og:title" content="Queens Necklace Kharghar" />
     <meta
@@ -63,6 +109,12 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet" />
+
+    <!-- Jquery -->
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.min.js"
+      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+      crossorigin="anonymous"></script>
 
     <!-- Custom CSS & JS  -->
     <link rel="stylesheet" href="css/style.css" />
@@ -182,7 +234,7 @@
               <img
                 class="d-block w-100 banner1"
                 width="100%"
-                src="img/banners/desktop_banner1.jpg"
+                src="img/banners/desktop_banner3.jpg"
                 alt="Banner1" />
             </div>
             <div class="carousel-item">
