--- a/thank_you.html
+++ b/thank_you.html
@@ -3,7 +3,61 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{Project Name}</title>
+    <title>Satyam Queen Necklace</title>
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-11547669967"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "AW-11547669967");
+    </script>
+
+    <!-- Event snippet for Submit Lead Form - Queens Necklace conversion page -->
+    <script>
+      gtag("event", "conversion", {
+        send_to: "AW-11547669967/qTz8CKvk-YEaEM_rrYIr",
+      });
+    </script>
+
+    <!-- Event snippet for Queens Necklace Whatsapp lead conversion page
+In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
+    <script>
+      function gtag_report_conversion(url) {
+        var callback = function () {
+          if (typeof url != "undefined") {
+            window.location = url;
+          }
+        };
+        gtag("event", "conversion", {
+          send_to: "AW-11547669967/C-noCNjihYIaEM_rrYIr",
+          event_callback: callback,
+        });
+        return false;
+      }
+    </script>
+
+    <!-- Event snippet for Queens Necklace Call from Website conversion page
+In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
+    <script>
+      function gtag_report_conversion(url) {
+        var callback = function () {
+          if (typeof url != "undefined") {
+            window.location = url;
+          }
+        };
+        gtag("event", "conversion", {
+          send_to: "AW-11547669967/bAicCJTmhYIaEM_rrYIr",
+          event_callback: callback,
+        });
+        return false;
+      }
+    </script>
 
     <!-- SEO -->
     <meta property="og:title" content="Queens Necklace Kharghar" />
