--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
     <!-- Custom CSS & JS  -->
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/common.css" />
-    <script defer src="js/script.js"></script>
+    <script defer src="js/scripts.js"></script>
   </head>
   <body
     data-bs-spy="scroll"
