--- a/thank_you.html
+++ b/thank_you.html
@@ -253,8 +253,9 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
               <li>
                 Project Registered under Government of India RERA Act 2016
               </li>
-              <li>RERA Registration No:- Coming Soon</li>
-              <!--<li>MAHA RERA Project Registration No.: </li>-->
+              <li>RERA Project Registration No:- P52000053533</li>
+              <li>Government RERA Authorised Advertiser's:- CAPITAL HOME</li>
+              <li>RERA Agent Registration No:- A52000022821</li>
               <li><b>Site Address:</b> Kharghar, Navi Mumbai, Maharashtra</li>
             </ul>
           </small>
@@ -262,7 +263,9 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         <div>
           <div>
             <span>
-              Disclaimer : The information provided on this website is intended
+              Disclaimer :This website is managed by Capital Home. Our Rera No.
+              is A52000022821. We are an authorised marketing partner for this
+              project. The information provided on this website is intended
               exclusively for informational purposes. This Website Is Not An
               Official Site And It Belongs To The Authorized Marketing Partner.
               All rights reserved. The content, design, and information on this
@@ -288,6 +291,13 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
             </span>
           </div>
 
+          <div>
+            <p>
+              <strong>Contact Us at:</strong> Hiranandani Crystal
+              Plaza,Kharghar, Navi Mumbai , 410210
+            </p>
+          </div>
+
           <p class="pb-4 pt-2">
             <a
               href="privacy_policy.html"
@@ -310,23 +320,22 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
     <!-- Mobile Footer Fixed Button -->
     <div class="container-fluid fixed-bottom action-footer-container">
       <ul class="nav nav-fill action-footer">
-        <li class="nav-item ps-1">
-          <a
-            onclick="return gtag_report_conversion('https://wa.me/+919321140032');"
-            href="https://wa.me/+919321140032"
-            class="text-decoration-none text-white">
-            <i class="fa-brands fa-whatsapp nav-icon"> </i> Whatsapp
+        <li
+          class="nav-item ps-1"
+          data-bs-toggle="modal"
+          data-bs-target="#popupModal">
+          <a class="text-decoration-none text-white">
+            <i class="fa-solid fa-taxi nav-icon"> </i> Site Visit
           </a>
         </li>
-        <li class="nav-item ps-1">
-          <a
-            onclick="return gtag_report_conversion('tel:+919321140032');"
-            href="tel:+919321140032"
-            class="text-decoration-none text-white">
-            <i class="fa-solid fa-phone me-2"></i> Call Us
+        <li
+          class="nav-item ps-1"
+          data-bs-toggle="modal"
+          data-bs-target="#popupModal">
+          <a class="text-decoration-none text-white">
+            <i class="fa-solid fa-phone me-2"></i> Call Back
           </a>
         </li>
-
         <li
           class="nav-item"
           data-bs-toggle="modal"
@@ -335,6 +344,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         </li>
       </ul>
     </div>
+    <!-- Mobile Footer Fixed Button Ends -->
 
     <!-- Modal -->
     <div
